// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`large left view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    testid="123"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div>
      <span
        class="bpk-text bpk-text--xxl bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
      <span
        class="bpk-text bpk-text--sm bpk-price__description"
      >
        a night
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`large left view should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <span
      class="bpk-text bpk-text--sm bpk-price__subtitle"
    >
      £200
    </span>
    <div>
      <span
        class="bpk-text bpk-text--xxl bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div>
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
    testid="123"
  >
    <div>
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price custom-classname"
  >
    <div>
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <div>
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
      <span
        class="bpk-text bpk-text--xs bpk-price__description"
      >
        a night
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small left view should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price"
  >
    <span
      class="bpk-text bpk-text--xs bpk-price__subtitle"
    >
      £200
    </span>
    <div>
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title bpk-price__spacing"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__column-container"
    >
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support arbitrary props 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
    testid="123"
  >
    <div
      class="bpk-price__column-container"
    >
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support custom class names 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right custom-classname"
  >
    <div
      class="bpk-price__column-container"
    >
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support description attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <div
      class="bpk-price__column-container"
    >
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title"
      >
        £1,830
      </span>
      <span
        class="bpk-text bpk-text--xs bpk-price__description"
      >
        a night
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`small right view should support subtitle attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-price bpk-price--right"
  >
    <span
      class="bpk-text bpk-text--xs bpk-price__subtitle"
    >
      £200
    </span>
    <div
      class="bpk-price__column-container"
    >
      <span
        class="bpk-text bpk-text--heading-4 bpk-price__title"
      >
        £1,830
      </span>
    </div>
  </div>
</DocumentFragment>
`;
